// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Load combined data from TeaserStore and props 1`] = `
<DocumentFragment>
  <div
    data-disabled="false"
    data-loading="false"
    data-testid="multi-item-selection"
  >
    <button
      type="button"
    >
      Pages
    </button>
    <button
      type="button"
    >
      Articles
    </button>
    <button
      type="button"
    >
      sort-2-1
    </button>
    <div
      data-testid="item-pages;2"
    >
      <div
        data-clickable="false"
        data-testid="item-content-pages;2"
      >
        <div
          class="item"
        >
          <div
            class="media"
          >
            <img
              src="/admin/media/8?format=sulu-25x25"
            />
          </div>
          <div
            class="content"
          >
            <p
              class="title"
            >
              Edited Page Title
            </p>
            <p
              class="description"
            >
              Edited Page Description

            </p>
          </div>
          <p
            class="type"
          >
            Pages (sulu_page.edited)
          </p>
        </div>
      </div>
      <button
        type="button"
      >
        edit-pages;2
      </button>
      <button
        type="button"
      >
        remove-pages;2
      </button>
    </div>
    <div
      data-testid="item-contacts;3"
    >
      <div
        data-clickable="false"
        data-testid="item-content-contacts;3"
      >
        <div
          class="item"
        >
          <div
            class="media"
          />
          <div
            class="content"
          >
            <p
              class="title"
            >
              Contact 1
            </p>
            <p
              class="description"
            >
              Contact Description 1

            </p>
          </div>
          <p
            class="type"
          >
            Contacts
          </p>
        </div>
      </div>
      <button
        type="button"
      >
        edit-contacts;3
      </button>
      <button
        type="button"
      >
        remove-contacts;3
      </button>
    </div>
    <div
      data-testid="item-contacts;4"
    >
      <div
        data-clickable="false"
        data-testid="item-content-contacts;4"
      >
        <div
          class="item"
        >
          <div
            class="media"
          />
          <div
            class="content"
          >
            <p
              class="title"
            >
              Contact 2
            </p>
            <p
              class="description"
            >
              Contact Description 2

            </p>
          </div>
          <p
            class="type"
          >
            Contacts
          </p>
        </div>
      </div>
      <button
        type="button"
      >
        edit-contacts;4
      </button>
      <button
        type="button"
      >
        remove-contacts;4
      </button>
    </div>
  </div>
  <div
    data-open="false"
    data-testid="multi-list-overlay-pages"
  >
    <button
      type="button"
    >
      close-pages
    </button>
  </div>
  <div
    data-open="false"
    data-testid="multi-list-overlay-articles"
  >
    <button
      type="button"
    >
      close-articles
    </button>
  </div>
</DocumentFragment>
`;

exports[`Render loading teaser selection 1`] = `
<DocumentFragment>
  <div
    data-disabled="false"
    data-loading="true"
    data-testid="multi-item-selection"
  >
    <button
      type="button"
    >
      Pages
    </button>
    <button
      type="button"
    >
      Articles
    </button>
    <button
      type="button"
    >
      sort-2-1
    </button>
    <div
      data-testid="item-pages;2"
    >
      <div
        data-clickable="false"
        data-testid="item-content-pages;2"
      >
        <div
          class="item"
        >
          <div
            class="media"
          />
          <div
            class="content"
          >
            <p
              class="title"
            >
              Title
            </p>
            <p
              class="description"
            >
              Description

            </p>
          </div>
          <p
            class="type"
          >
            Pages (sulu_page.edited)
          </p>
        </div>
      </div>
      <button
        type="button"
      >
        edit-pages;2
      </button>
      <button
        type="button"
      >
        remove-pages;2
      </button>
    </div>
  </div>
  <div
    data-open="false"
    data-testid="multi-list-overlay-pages"
  >
    <button
      type="button"
    >
      close-pages
    </button>
  </div>
  <div
    data-open="false"
    data-testid="multi-list-overlay-articles"
  >
    <button
      type="button"
    >
      close-articles
    </button>
  </div>
</DocumentFragment>
`;

exports[`Render teaser selection with data 1`] = `
<DocumentFragment>
  <div
    data-disabled="false"
    data-loading="false"
    data-testid="multi-item-selection"
  >
    <button
      type="button"
    >
      Pages
    </button>
    <button
      type="button"
    >
      Articles
    </button>
    <button
      type="button"
    >
      sort-2-1
    </button>
    <div
      data-testid="item-pages;2"
    >
      <div
        data-clickable="false"
        data-testid="item-content-pages;2"
      >
        <div
          class="item"
        >
          <div
            class="media"
          />
          <div
            class="content"
          >
            <p
              class="title"
            >
              Title
            </p>
            <p
              class="description"
            >
              Description

            </p>
          </div>
          <p
            class="type"
          >
            Pages (sulu_page.edited)
          </p>
        </div>
      </div>
      <button
        type="button"
      >
        edit-pages;2
      </button>
      <button
        type="button"
      >
        remove-pages;2
      </button>
    </div>
  </div>
  <div
    data-open="false"
    data-testid="multi-list-overlay-pages"
  >
    <button
      type="button"
    >
      close-pages
    </button>
  </div>
  <div
    data-open="false"
    data-testid="multi-list-overlay-articles"
  >
    <button
      type="button"
    >
      close-articles
    </button>
  </div>
</DocumentFragment>
`;

exports[`Render teaser selection with presentations 1`] = `
<DocumentFragment>
  <div
    data-disabled="false"
    data-loading="false"
    data-testid="multi-item-selection"
  >
    <button
      type="button"
    >
      Pages
    </button>
    <button
      type="button"
    >
      Articles
    </button>
    <button
      type="button"
    >
      Test 1
    </button>
    <button
      type="button"
    >
      Test 2
    </button>
    <button
      type="button"
    >
      sort-2-1
    </button>
    <div
      data-testid="item-pages;2"
    >
      <div
        data-clickable="false"
        data-testid="item-content-pages;2"
      >
        <div
          class="item"
        >
          <div
            class="media"
          />
          <div
            class="content"
          >
            <p
              class="title"
            >
              Title
            </p>
            <p
              class="description"
            >
              Description

            </p>
          </div>
          <p
            class="type"
          >
            Pages (sulu_page.edited)
          </p>
        </div>
      </div>
      <button
        type="button"
      >
        edit-pages;2
      </button>
      <button
        type="button"
      >
        remove-pages;2
      </button>
    </div>
  </div>
  <div
    data-open="false"
    data-testid="multi-list-overlay-pages"
  >
    <button
      type="button"
    >
      close-pages
    </button>
  </div>
  <div
    data-open="false"
    data-testid="multi-list-overlay-articles"
  >
    <button
      type="button"
    >
      close-articles
    </button>
  </div>
</DocumentFragment>
`;
